--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>3.5.13</version>
+      <scope>test</scope>
     </dependency>        
     <dependency>
       <groupId>org.junit.jupiter</groupId>
