--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,10 +2,6 @@ repos:
   - repo: https://github.com/gherynos/pre-commit-java
     rev: v0.2.1
     hooks:
-      # - id: pmd
-      #   exclude: /test/
-      # - id: cpd
-      #   exclude: /test/
       - id: checkstyle
         exclude: /test/
         args: ["-c", "sun_checks.xml"]
@@ -13,4 +9,4 @@ repos:
     rev: v1.31.0
     hooks:
       - id: talisman-commit
-        entry: talisman --githook pre-commit
+        entry: talisman --githook pre-commit -p **/*.java
