--- a/.github/workflows/prod.build.yml
+++ b/.github/workflows/prod.build.yml
@@ -3,7 +3,7 @@ name: Java CI Prod
 on:
   push:
     tags:
-      - '*'
+      - "*"
   workflow_dispatch:
 
 jobs:
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: JDK 1.11 Install
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
           java-version: 11
 
@@ -26,16 +26,14 @@ jobs:
           cp target/*.jar release
 
       - name: Artifact Upload
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: Package
           path: release
 
       - name: Make Release
-        uses: softprops/action-gh-release@v0.1.5
+        uses: softprops/action-gh-release@v2
         with:
-          files:
-            target/*.jar
+          files: target/*.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
