--- a/.github/workflows/dev.build.yml
+++ b/.github/workflows/dev.build.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 11
+          distribution: oracle
 
       - name: Maven Build
         run: |
