--- a/.github/workflows/prod.build.yml
+++ b/.github/workflows/prod.build.yml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           java-version: 11
+          distribution: oracle
 
       - name: Maven Build
         run: |
